# Final_Backend

./: .env.example  .gitignore  AMEOWZON_중간 보고서.md  CODEX_RULES.md  DATABASE_ERD.md  DEPLOYMENT_LOG_2026-02-24.md  DEPLOYMENT_UPDATES.md  Dockerfile  INFRASTRUCTURE_COMPLETE_ANALYSIS.md  Makefile  NANOBANANA_QUICK_START.md  QUICK_REGISTER_API_SAMPLE.md  README copy.md  README.md  TRAIN_VOICE_MERGE_COMPLETE.md  alb-controller-patch.json  alb-controller-patch.yaml  app.py  build-and-deploy.ps1  build-and-deploy.sh  create_test_user.py  docker-compose.yml  init-db.sql  pod_logs.txt  requirements.txt  중간보고서_업데이트_내용_2026_02_26.md
services/user_service/: .dockerignore  CHALLENGE_API_DOCUMENTATION.md  Dockerfile  GEMINI_CHALLENGE_SETUP.md  README.md  README_IMAGE_TEST.md  REPLICATE_SETUP.md  RUN_DUMMY_DATA.md  TEST_INSTRUCTIONS.md  add_gps_columns_to_submissions.sql  add_title_en_column.sql  alb-controller-deployment.yaml  check_profile_image_url.py  check_train_voice_urls.py  dynamodb_manual_update.py  fix_corrupted_profile_url.py  fix_corrupted_url_direct.py  friends_data.json  migrate_duress_to_train_voice.sql  pyproject.toml  requirements.txt  run_local.py  test_gemini_quota.py  update_gps_sample_data.sql  update_null_cat_colors.py
services/user_service/app/: main.py
services/user_service/app/api/: deps.py  health.py
services/user_service/app/core/: auth.py  config.py  database.py  security.py
services/user_service/migrations/: 001_create_challenges_tables.sql  002_add_phone_number_to_users.sql  003_add_gps_to_submissions.sql  remove_challenge_unique_constraint.sql
(+207 files in other folders)
